--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -49,7 +49,11 @@
                     {% for product in bag_products %}
                         <div class="row">
                             <div class="col-4 mb-1">
-                                <img class="img-fluid rounded w-75" src="{{ product.product.image.url }}">
+                                {% if product.product.image %}
+                                    <img class="img-fluid rounded w-75" src="{{ product.product.image.url }}" alt="{{ product.product.name }}">
+                                {% else %}
+                                    <img class="img-fluid rounded w-75" src="{{ MEDIA_URL }}no-image.png" alt="{{ product.product.name }}">
+                                {% endif %}
                             </div>
                             <div class="col-4">
                                 <p class="my-0 small">{{ product.product.name }}</p>
