--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -24,14 +24,13 @@
                     <!-- products detail image -->
                     <div class="col-12 col-md-5 col-lg-6">
                         <div class="rounded bg-product-img">
-                            <a href="{{ product.image.url }}" target="_blank" class="mx-auto">  
                             {% if product.image %}
-                                <a href="{{ product.image.url }}" target="_blank">
+                                <a href="{{ product.image.url }}" target="_blank" class="mx-auto">
                                     <img class="card-img-top img-fluid rounded" src="{{ product.image.url }}" alt="{{ membership.name }}">
                                 </a>
-                                {% else %}
-                                <a href="">
-                                    <img class="card-img-top img-fluid" src="{{MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                            {% else %}
+                                <a href="{{MEDIA_URL }}no-image.png" target="_blank" class="mx-auto">
+                                    <img class="card-img-top img-fluid" src="{{MEDIA_URL }}no-image.png" alt="{{ product.name }}">
                                 </a>
                             {% endif %}
                             </a>
