--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -40,7 +40,13 @@
                             <div class=" mt-2">
 
                                 <div class="rounded bg-product-img "> 
-                                    <img class="img-fluid rounded prd-img-zoom" src="{{ product.image.url }}" alt="{{ membership.name }}">
+                                    {% if product.image %}
+                                        <img class="img-fluid rounded prd-img-zoom" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    {% elif product.product.image_url %}
+                                        <img class="img-fluid rounded prd-img-zoom" src="{{ product.image_url }}" alt="{{ product.name }}">
+                                    {% else %}
+                                        <img class="img-fluid rounded prd-img-zoom" src="{{ MEDIA_URL }}no-image.png" alt="{{ product.name }}">
+                                    {% endif %}
                                 </div>
 
                                 <div class="pb-0 bg-white text-left">
