product admin - deliting products

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                                 </li> 
                             {% endif%}
                             <li class="nav-item user-link-top">
-                                <a class="nav-link link-exp underline-transition" href="{% url 'profile' %}">My Profile</a>
+                                <a class="nav-link link-exp underline-transition" href="{% url 'profile' %}">Profile</a>
                             </li>
                             <li class="nav-item user-link-btm">
                                 <a class="nav-link link-exp underline-transition" href="{% url 'account_logout' %}">Logout</a>
