--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -46,8 +46,10 @@
                             <p class="my-2 lg-font font-mb">€{{ product.price }}</p>
                             <hr class="w-100 my-1">
                             <p class="sm-font">{{ product.description }}</p>
-                            <p class="sm-font">{{ membership.description }}</p>
-
+                            {% if request.user.is_superuser %}
+                                <a href="{% url 'edit_product' product.id %}">Edit</a>
+                                <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                            {% endif%}
                             <!-- add to bag form -->
                             <form class="form" action="{% url 'add_item' product.id %}" method="POST">
                             {% csrf_token %}
@@ -94,16 +96,16 @@
                                     </div>
                                 </div>
                                     
-                                    <div class="col-12 mt-2 mb-4">
-                                        <a href="{% url 'products' %}" class="btn mt-3 pl-back">
-                                            <span>
-                                                <i class="fas fa-chevron-left"></i>
-                                            </span>Back</a>
-                                        <input type="submit" class="btn btn-info text-uppercase mt-3"
-                                        value="Add to Bag">
-                                    </div>
-                                    <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                                    {% endwith %}
+                                <div class="col-12 mt-2 mb-4">
+                                    <a href="{% url 'products' %}" class="btn mt-3 pl-back">
+                                        <span>
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>Back</a>
+                                    <input type="submit" class="btn btn-info text-uppercase mt-3"
+                                    value="Add to Bag">
+                                </div>
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}">
+                                {% endwith %}
                                 </div>
                             </form>
                         </div>
