--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -59,6 +59,12 @@
                                             <p>€{{ product.price }}</p>
                                         </div>
                                     </div>
+                                    <div class="col">
+                                    {% if request.user.is_superuser %}
+                                        <a href="{% url 'edit_product' product.id %}">Edit</a>
+                                        <a href="{% url 'delete_product' product.id %}" class="text-danger">Delete</a>
+                                    {% endif%}
+                                    </div>
                                 </div>
                             </div>
                         </a>    
