--- a/static/css/base.css
+++ b/static/css/base.css
@@ -206,6 +206,34 @@ transition: 0.4s;
     box-shadow: 2px 2px 2px #9e9e9e; 
 }
 
+/* product form */
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+
+.btn-file input[type="file"] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    opacity: 0;
+    cursor: pointer;
+}
+
+.custom-checkbox .custom-control-label::before{
+    border-radius: 0;
+    border-color: rgb(161, 40, 40);
+}
+
+.custom-checkbox .custom-control-input:checked~.custom-control-label::before{
+    background-color: rgb(161, 40, 40);;
+    border-color: rgb(161, 40, 40);;
+    border-radius:0;
+}
+
 /* media responsiveness */
 
 @media only screen and (min-width: 992px) and (min-height: 480px){
