added 2nd custom model

--- a/memberships/templates/memberships/membership_detail.html
+++ b/memberships/templates/memberships/membership_detail.html
@@ -58,7 +58,9 @@
                             <hr class="w-100 my-1">
                             <p class="fw-bolder">{{ membership.description }}</p>
                             <p class="small pe-2">{{ membership.text }}</p>
+                            <p class="fw-bolder">Contact us to book an appointment!</p>
                             <a href="{% url 'memberships' %}" class="btn btn-outline-dark">Back</a>
+                            <a href="{% url 'info' %}" class="btn btn-info">Contact us!</a>
                         </div>
                     </div>
                 </div>
