--- a/info/templates/info/info.html
+++ b/info/templates/info/info.html
@@ -15,43 +15,41 @@
                             a matter of hours to help you.</p>
                         <div class="row">
                             <div class="col-md-9 mb-md-0 mb-5">
-                                <form id="contact-form" name="contact-form" action="" method="POST">
+
+                                <!-- info form -->
+                                <form id="contact-form" name="contact-form" method="POST">
                                     {% csrf_token %}
-                                    <div class="row">
+                                    <div class="row form-group">
                                         <div class="col-md-6">
                                             <div class="md-form mb-0">
-                                                <label for="name" class="">Your name:</label>
-                                                <input type="text" id="name" name="name" class="form-control">
+                                                <label for="name">Your name:</label>
+                                                <input type="text" id="name" name="name" class="form-control" required>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="md-form mb-0">
-                                                <label for="email" class="">Your email:</label>
-                                                <input type="text" id="email" name="email" class="form-control">
+                                                <label for="email">Your email:</label>
+                                                <input type="text" id="email" name="email" class="form-control" required>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row">
                                         <div class="col-md-12">
                                             <div class="md-form mb-0">
-                                                <label for="subject" class="">Subject:</label>
-                                                <input type="text" id="subject" name="subject" class="form-control">
+                                                <label for="subject">Subject:</label>
+                                                <input type="text" id="subject" name="subject" class="form-control" required>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="row">
                                         <div class="col-md-12">
                                             <div class="md-form">
                                                 <label for="message">Your message:</label>
-                                                <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                                                <textarea type="text" id="message" name="message"
+                                                rows="2" class="form-control md-textarea" required></textarea>
                                             </div>
                                         </div>
+                                        <div class="text-center mt-4">
+                                    <input type="submit" value="submit" class="btn btn-info">
+                                </div>
                                     </div>
                                 </form>
-                                <div class="text-center mt-4">
-                                    <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
-                                </div>
-                                <div class="status"></div>
                             </div>
                             <div class="col-md-3 text-center">
                                 <ul class="list-unstyled mb-0">
