changed gyms location and added links

--- a/info/templates/info/info.html
+++ b/info/templates/info/info.html
@@ -53,14 +53,22 @@
                             </div>
                             <div class="col-md-3 text-center">
                                 <ul class="list-unstyled mb-0">
-                                    <li><i class="fas fa-map-marker-alt"></i>
-                                        <p>Dublin, D01, Ireland</p>
+                                    <li>
+                                        <i class="fas fa-map-marker-alt"></i><i class="fas fa-dumbbell ms-3"></i><br>
+                                    </li>
+                                    <li class="small">
+                                        <a href="https://www.google.pt/maps/place/O'Connell+Street+Upper,+Dublin,+Ireland/@53.3511813,-6.2631577,17z/data=!3m1!4b1!4m5!3m4!1s0x48670e869f3ecf2f:0x52351ba3ab63e170!8m2!3d53.3511781!4d-6.260969">
+                                        O' Connell St, D01</a><br>
+                                        <a href="https://www.google.pt/maps/place/George+St/@53.3437528,-6.2667717,17z/data=!3m1!4b1!4m5!3m4!1s0x48670fb0e26b7295:0xf8be19c366df6828!8m2!3d53.3437491!4d-6.2645966">
+                                        George St, D02</a><br>
+                                        <a href="https://www.google.pt/maps/place/Henry+St,+North+City,+Dublin,+Ireland/@53.3494771,-6.2643302,17z/data=!3m1!4b1!4m5!3m4!1s0x48670e838ab4bdaf:0xd176b7661bf18c26!8m2!3d53.3494739!4d-6.2621415">
+                                        Henry St, D01</a><br>
                                     </li>
                                     <li><i class="fas fa-phone mt-4"></i>
                                         <p>+ 01 234 567 89</p>
                                     </li>
                                     <li><i class="fas fa-envelope mt-4"></i>
-                                        <p>help@motigym.com</p>
+                                        <p>staff@motigym.com</p>
                                     </li>
                                 </ul>
                             </div>
