--- a/templates/404.html
+++ b/templates/404.html
@@ -1,12 +1,20 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="container-fluid">
-<div class="row">
-<div class="col text-center mt-3">
-   <h2 class="title-text page-title">404 error</h2>
-   <hr class="w-50 mb-1 title-hr">
+<div class="container-fluid row g-0">
+    <div class="rounded my-4 prd-main-div col-10 offset-1 bg-light">
+      <div class="row">
+        <div class="col-lg-10 offset-lg-1 col-12 mb-4 p-4">
+            <div class="row">
+            <div class="col text-center mt-3">
+            <h2 class="title-text page-title">404 error</h2>
+            <hr class="w-50 mb-1 title-hr">
+            </div>
+            <p>OPS! We Hit A Snag Loading the page you were looking for!</p>
+            <a class="error-link" href="{% url 'home' %}">Go back to the home page</a>
+          </div>
+       </div>
+    </div>
 </div>
-<p>Looks like this isn't the page you were looking for!</p>
-<a class="error-link" href="{% url 'home' %}">Go back to the home page</a>
+
 {% endblock %}
