updated buttons in error pages

--- a/templates/404.html
+++ b/templates/404.html
@@ -11,7 +11,7 @@
             <hr class="w-50 mb-1 title-hr">
             </div>
             <p>OPS! We Hit A Snag Loading the page you were looking for!</p>
-            <a class="error-link" href="{% url 'home' %}">Go back to the home page</a>
+            <a class="error-link btn btn-info" href="{% url 'home' %}">Go back to the home page</a>
           </div>
        </div>
     </div>
