--- a/templates/500.html
+++ b/templates/500.html
@@ -11,7 +11,7 @@
             <hr class="w-50 mb-1 title-hr">
             </div>
             <p>OPS! The server didn’t quite like that!</p>
-            <a class="error-link" href="{% url 'home' %}">Go back to the home page</a>
+            <a class="error-link btn btn-info" href="{% url 'home' %}">Go back to the home page</a>
           </div>
        </div>
     </div>
